# WinPrize

./: .vercelignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt  run.py  vercel.json
api/: config.py  init_data.py  main.py  startup.py
api/models/: draw.py  enrollment.py  init.py  notification.py  password_reset.py  payment.py  user.py  verification.py
api/routes/: admin_routes.py  auth_routes.py  draw_routes.py  init.py  notification_routes.py  password_routes.py  payment_routes.py  verification_routes.py
api/schemas/: draw_schema.py  enrollment_schema.py  init.py  user_schema.py
api/services/: draw_engine.py  file_db.py  notification_service.py
api/utils/: auth.py  email.py  init.py
data/: email_verifications.json  lucky_draws.json  notifications.json  password_resets.json  payments.json  users.json
static/css/: style.css
static/js/: admin-payments.js  admin.js  admin_draw.js  app.js  auth.js  draws.js  enroll.js  login.js  main.js  payment.js  register.js  winner.js
templates/: admin.html  confirm.html  index.html  notifications.html  payment-status.html  reset_password.html  reset_password_error.html  verify.html  winner.html
